2009-04-15  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (rec_permute_helper::blk_trans): Declare as static.
	(Array<T>::transpose): Reuse it.

2009-04-04  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::make_unique): Don't economize when unique.
	(Array<T>::resize_fill (octave_idx_type, const T&)): Optimize push &
	pop operations.
	(Array<T>::delete_elements (const idx_vector&)): Do pop operation
	using resize.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::assign): Remove redundant checks after invalid
	resize.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::find): Reshape result for Matlab compatibility.
	* Array.h (Array<T>): Add friend template declaration.

2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::idx_vector_rep::idx_vector_rep (const
	Array<bool>&): Use more M*b-compatible behaviour.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::numel): Add optional argument, simplify.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::dims): Return a const reference.
	(Array<T>::is_vector): New method.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::find): New method.
	* Array.h: Declare it.

2009-03-25  John W. Eaton  <jwe@octave.org>

	* EIG.cc (EIG::init (const Matrix&, bool),
	EIG::init (const Matrix&, const Matrix&, bool)):
	Avoid volatile declaration for tmp variable.

	* Makefile.in (MATRIX_INC): Add Sparse-diag-op-defs.h and
	Sparse-perm-op-defs.h to the list.

2009-03-25  Jaroslav Hajek  <highegg@gmail.com>
	
	* oct-inttypes.cc (INT_DOUBLE_BINOP_DECL (*, uint64),
	INT_DOUBLE_BINOP_DECL (*, int64)): x -> y where appropriate.

2009-03-25  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (rec_permute_helper::use_blk): New field.
	(rec_permute_helper::blk_trans): New method.
	(rec_permute_helper::rec_permute_helper): Use smart reductions,
	detect possibility of using blocked transpose.